Add ipython file

--- a/Mongo_DB/FinalProject/Mongo_Database.ipynb
+++ b/Mongo_DB/FinalProject/Mongo_Database.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:77c4f772fbd9627a898a69d0ec5771b0d8cae4acb7c5cb468f2bbce2dcd67839"
+  "signature": "sha256:10c7fd4c1937ebfd9ef3ecfb83e2d45a8b9ee1e6fcc0ba4c2a1b842cb786ef1c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -131,15 +131,34 @@
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# check if data is inserted into MongoDB"
+     ],
+     "language": "python",
      "metadata": {},
-     "source": [
-      "# check if data is inserted into MongoDB\n",
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "pipeline = [\n",
       "    {'$limit' : 6}\n",
-      "]\n",
-      "\n",
-      "[{u'_id': ObjectId('549741e303895f141015f0f1'),\n",
+      "]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "```[{u'_id': ObjectId('549741e303895f141015f0f1'),\n",
       "  u'created': {u'changeset': u'13416558',\n",
       "               u'timestamp': u'2012-10-08T18:36:25Z',\n",
       "               u'uid': u'900987',\n",
@@ -147,8 +166,9 @@
       "               u'version': u'5'},\n",
       "  u'id': u'104306',\n",
       "  u'pos': [51.5232881, -0.1205737],\n",
-      "  u'type': u'node'},\n",
-      " {u'_id': ObjectId('549741e303895f141015f0f2'),\n",
+      "  u'type': u'node'},```  \n",
+      "  \n",
+      " ```{u'_id': ObjectId('549741e303895f141015f0f2'),\n",
       "  u'created': {u'changeset': u'24275401',\n",
       "               u'timestamp': u'2014-07-21T15:08:27Z',\n",
       "               u'uid': u'481116',\n",
@@ -156,8 +176,9 @@
       "               u'version': u'5'},\n",
       "  u'id': u'104309',\n",
       "  u'pos': [51.5234897, -0.1149117],\n",
-      "  u'type': u'node'},\n",
-      " {u'_id': ObjectId('549741e303895f141015f0f3'),\n",
+      "  u'type': u'node'},```  \n",
+      "  \n",
+      " ```{u'_id': ObjectId('549741e303895f141015f0f3'),\n",
       "  u'created': {u'changeset': u'13419900',\n",
       "               u'timestamp': u'2012-10-08T22:22:19Z',\n",
       "               u'uid': u'900987',\n",
@@ -165,8 +186,9 @@
       "               u'version': u'4'},\n",
       "  u'id': u'104310',\n",
       "  u'pos': [51.5229923, -0.1144836],\n",
-      "  u'type': u'node'},\n",
-      " {u'_id': ObjectId('549741e303895f141015f0f4'),\n",
+      "  u'type': u'node'},```  \n",
+      "  \n",
+      " ```{u'_id': ObjectId('549741e303895f141015f0f4'),\n",
       "  u'created': {u'changeset': u'2511284',\n",
       "               u'timestamp': u'2009-09-17T12:28:02Z',\n",
       "               u'uid': u'20163',\n",
@@ -175,8 +197,9 @@
       "  u'highway': u'traffic_signals',\n",
       "  u'id': u'104312',\n",
       "  u'pos': [51.5215036, -0.1133081],\n",
-      "  u'type': u'node'},\n",
-      " {u'_id': ObjectId('549741e303895f141015f0f5'),\n",
+      "  u'type': u'node'},```  \n",
+      "  \n",
+      " ```{u'_id': ObjectId('549741e303895f141015f0f5'),\n",
       "  u'created': {u'changeset': u'2554926',\n",
       "               u'timestamp': u'2009-09-21T09:11:46Z',\n",
       "               u'uid': u'20163',\n",
@@ -184,8 +207,9 @@
       "               u'version': u'5'},\n",
       "  u'id': u'104313',\n",
       "  u'pos': [51.5202454, -0.1125015],\n",
-      "  u'type': u'node'},\n",
-      " {u'_id': ObjectId('549741e303895f141015f0f6'),\n",
+      "  u'type': u'node'},```  \n",
+      "  \n",
+      " ```{u'_id': ObjectId('549741e303895f141015f0f6'),\n",
       "  u'created': {u'changeset': u'2511284',\n",
       "               u'timestamp': u'2009-09-17T12:28:03Z',\n",
       "               u'uid': u'20163',\n",
@@ -193,19 +217,42 @@
       "               u'version': u'4'},\n",
       "  u'id': u'104314',\n",
       "  u'pos': [51.5190718, -0.1118119],\n",
-      "  u'type': u'node'}]\n",
-      "\n",
-      "\n",
-      "# find 30 most frequent type of shops in the area\n",
+      "  u'type': u'node'}]```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# find 30 most frequent type of shops in the area"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "pipeline = [ \n",
       "            {\"$group\" : {\"_id\" : \"$shop\", \n",
       "                          'count' : { \"$sum\" : 1} } },\n",
       "             { \"$sort\" : { \"count\" : -1 } },\n",
       "             { \"$skip\" : 1}, \n",
       "             { \"$limit\" : 30 } \n",
-      "]\n",
-      "\n",
-      "[{u'_id': u'convenience', u'count': 450},\n",
+      "]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "```[{u'_id': u'convenience', u'count': 450},\n",
       " {u'_id': u'clothes', u'count': 300},\n",
       " {u'_id': u'supermarket', u'count': 195},\n",
       " {u'_id': u'hairdresser', u'count': 142},\n",
@@ -234,18 +281,42 @@
       " {u'_id': u'sports', u'count': 23},\n",
       " {u'_id': u'art', u'count': 22},\n",
       " {u'_id': u'butcher', u'count': 22},\n",
-      " {u'_id': u'deli', u'count': 21}]\n",
-      "\n",
-      "# find top 10 contributing users\n",
+      " {u'_id': u'deli', u'count': 21}]```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# find top 10 contributing users"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "pipeline = [\n",
       "            {'$match': {'created.user':{'$exists':1}}},\n",
       "            {'$group': {'_id':'$created.user',\n",
       "                        'count':{'$sum':1}}},\n",
       "            {'$sort': {'count':-1}},\n",
       "            {'$limit' : 10} \n",
-      "]\n",
-      "\n",
-      "[{u'_id': u'Amaroussi', u'count': 85661},\n",
+      "]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "```[{u'_id': u'Amaroussi', u'count': 85661},\n",
       " {u'_id': u'Paul The Archivist', u'count': 70300},\n",
       " {u'_id': u'Tom Chance', u'count': 62752},\n",
       " {u'_id': u'Blumpsy', u'count': 46836},\n",
@@ -254,10 +325,24 @@
       " {u'_id': u'Harry Wood', u'count': 33152},\n",
       " {u'_id': u'DLMatthews', u'count': 31197},\n",
       " {u'_id': u'TimSC_Data_CC0_To_Andy_Allan', u'count': 27347},\n",
-      " {u'_id': u'mapper999', u'count': 21350}]\n",
-      "\n",
-      "\n",
-      "# find top 10 types of places which have an article in wikipedia\n",
+      " {u'_id': u'mapper999', u'count': 21350}]```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# find top 10 types of places which have an article in wikipedia"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "pipeline = [\n",
       "            {'$match': {'wikipedia':{'$exists':1}}},\n",
       "            {'$group': {'_id':'$amenity',\n",
@@ -265,9 +350,18 @@
       "            {'$sort': {'count':-1}},\n",
       "            {'$skip': 1},\n",
       "            {'$limit' : 10}\n",
-      "]\n",
-      "\n",
-      "[{u'_id': u'place_of_worship', u'count': 247},\n",
+      "]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "```[{u'_id': u'place_of_worship', u'count': 247},\n",
       " {u'_id': u'theatre', u'count': 136},\n",
       " {u'_id': u'restaurant', u'count': 110},\n",
       " {u'_id': u'university', u'count': 84},\n",
@@ -276,33 +370,78 @@
       " {u'_id': u'hospital', u'count': 36},\n",
       " {u'_id': u'courthouse', u'count': 24},\n",
       " {u'_id': u'cinema', u'count': 19},\n",
-      " {u'_id': u'bar', u'count': 18}]\n",
-      "\n",
-      "\n",
-      "# find names of articles in wikipedia for cinemas\n",
+      " {u'_id': u'bar', u'count': 18}]```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# find names of articles in wikipedia for cinemas"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "    pipeline = [\n",
       "            {'$match': {'amenity':'cinema',\n",
       "                        'wikipedia':{'$exists':1}}},\n",
       "            {'$project':{'_id': '$name',\n",
       "                         'wikipedia':'$wikipedia'}},\n",
       "            {'$limit':3}\n",
-      "]\n",
-      "\n",
-      "[{u'_id': u'Screen On The Green', u'wikipedia': u'en:The Screen On The Green'},\n",
+      "]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "```[{u'_id': u'Screen On The Green', u'wikipedia': u'en:The Screen On The Green'},\n",
       " {u'_id': u'Cineworld', u'wikipedia': u'en:The O2'},\n",
-      " {u'_id': u'BFI IMAX', u'wikipedia': u'en:London_IMAX'}]\n",
-      "\n",
-      "\n",
-      "# find name of the restaurant and its cuisine\n",
+      " {u'_id': u'BFI IMAX', u'wikipedia': u'en:London_IMAX'}]```"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# find name of the restaurant and its cuisine"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "pipeline = [\n",
       "            {'$match': {'amenity':'restaurant',\n",
       "                        'name':{'$exists':1}}},\n",
       "            {'$project':{'_id':'$name',\n",
       "                         'cuisine':'$cuisine'}}\n",
-      "]\n",
-      "\n",
-      ". . .\n",
-      " {u'_id': u'Shandis', u'cuisine': u'persian'},\n",
+      "]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " ```{u'_id': u'Shandis', u'cuisine': u'persian'},\n",
       " {u'_id': u'Rabieng', u'cuisine': u'thai'},\n",
       " {u'_id': u'Rajmoni', u'cuisine': u'indian'},\n",
       " {u'_id': u'La Petit Auberge', u'cuisine': u'french'},\n",
@@ -312,8 +451,7 @@
       " {u'_id': u'Caf\\xe9 Gallipoli Again', u'cuisine': u'turkish'},\n",
       " {u'_id': u'Desperados', u'cuisine': u'mexican'},\n",
       " {u'_id': u'ThaiVeg', u'cuisine': u'vegan'},\n",
-      " {u'_id': u'Tortilla', u'cuisine': u'mexican'},\n",
-      ". . ."
+      " {u'_id': u'Tortilla', u'cuisine': u'mexican'}```"
      ]
     },
     {
