Add ipython file

--- a/Mongo_DB/FinalProject/Mongo_Database.ipynb
+++ b/Mongo_DB/FinalProject/Mongo_Database.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:10c7fd4c1937ebfd9ef3ecfb83e2d45a8b9ee1e6fcc0ba4c2a1b842cb786ef1c"
+  "signature": "sha256:7ddf394192f9f970a99ccabd836dd968649e626cfe09a3b9cd3fa2d4c426e34a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -438,10 +438,10 @@
      "prompt_number": 14
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      " ```{u'_id': u'Shandis', u'cuisine': u'persian'},\n",
+      "{u'_id': u'Shandis', u'cuisine': u'persian'},\n",
       " {u'_id': u'Rabieng', u'cuisine': u'thai'},\n",
       " {u'_id': u'Rajmoni', u'cuisine': u'indian'},\n",
       " {u'_id': u'La Petit Auberge', u'cuisine': u'french'},\n",
@@ -451,7 +451,7 @@
       " {u'_id': u'Caf\\xe9 Gallipoli Again', u'cuisine': u'turkish'},\n",
       " {u'_id': u'Desperados', u'cuisine': u'mexican'},\n",
       " {u'_id': u'ThaiVeg', u'cuisine': u'vegan'},\n",
-      " {u'_id': u'Tortilla', u'cuisine': u'mexican'}```"
+      " {u'_id': u'Tortilla', u'cuisine': u'mexican'}"
      ]
     },
     {
