Add ipython file

--- a/Mongo_DB/FinalProject/Mongo_Database.ipynb
+++ b/Mongo_DB/FinalProject/Mongo_Database.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7ddf394192f9f970a99ccabd836dd968649e626cfe09a3b9cd3fa2d4c426e34a"
+  "signature": "sha256:c7c300cd7af16364d40dbc3e71715a65985b69ecd9f964be866a77af6c042395"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -155,10 +155,10 @@
      "prompt_number": 26
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "```[{u'_id': ObjectId('549741e303895f141015f0f1'),\n",
+      "[{u'_id': ObjectId('549741e303895f141015f0f1'),\n",
       "  u'created': {u'changeset': u'13416558',\n",
       "               u'timestamp': u'2012-10-08T18:36:25Z',\n",
       "               u'uid': u'900987',\n",
@@ -166,9 +166,9 @@
       "               u'version': u'5'},\n",
       "  u'id': u'104306',\n",
       "  u'pos': [51.5232881, -0.1205737],\n",
-      "  u'type': u'node'},```  \n",
+      "  u'type': u'node'},  \n",
       "  \n",
-      " ```{u'_id': ObjectId('549741e303895f141015f0f2'),\n",
+      " {u'_id': ObjectId('549741e303895f141015f0f2'),\n",
       "  u'created': {u'changeset': u'24275401',\n",
       "               u'timestamp': u'2014-07-21T15:08:27Z',\n",
       "               u'uid': u'481116',\n",
@@ -176,9 +176,9 @@
       "               u'version': u'5'},\n",
       "  u'id': u'104309',\n",
       "  u'pos': [51.5234897, -0.1149117],\n",
-      "  u'type': u'node'},```  \n",
+      "  u'type': u'node'},  \n",
       "  \n",
-      " ```{u'_id': ObjectId('549741e303895f141015f0f3'),\n",
+      " {u'_id': ObjectId('549741e303895f141015f0f3'),\n",
       "  u'created': {u'changeset': u'13419900',\n",
       "               u'timestamp': u'2012-10-08T22:22:19Z',\n",
       "               u'uid': u'900987',\n",
@@ -186,9 +186,9 @@
       "               u'version': u'4'},\n",
       "  u'id': u'104310',\n",
       "  u'pos': [51.5229923, -0.1144836],\n",
-      "  u'type': u'node'},```  \n",
+      "  u'type': u'node'},  \n",
       "  \n",
-      " ```{u'_id': ObjectId('549741e303895f141015f0f4'),\n",
+      " {u'_id': ObjectId('549741e303895f141015f0f4'),\n",
       "  u'created': {u'changeset': u'2511284',\n",
       "               u'timestamp': u'2009-09-17T12:28:02Z',\n",
       "               u'uid': u'20163',\n",
@@ -197,9 +197,9 @@
       "  u'highway': u'traffic_signals',\n",
       "  u'id': u'104312',\n",
       "  u'pos': [51.5215036, -0.1133081],\n",
-      "  u'type': u'node'},```  \n",
+      "  u'type': u'node'},  \n",
       "  \n",
-      " ```{u'_id': ObjectId('549741e303895f141015f0f5'),\n",
+      " {u'_id': ObjectId('549741e303895f141015f0f5'),\n",
       "  u'created': {u'changeset': u'2554926',\n",
       "               u'timestamp': u'2009-09-21T09:11:46Z',\n",
       "               u'uid': u'20163',\n",
@@ -207,9 +207,9 @@
       "               u'version': u'5'},\n",
       "  u'id': u'104313',\n",
       "  u'pos': [51.5202454, -0.1125015],\n",
-      "  u'type': u'node'},```  \n",
+      "  u'type': u'node'},  \n",
       "  \n",
-      " ```{u'_id': ObjectId('549741e303895f141015f0f6'),\n",
+      " {u'_id': ObjectId('549741e303895f141015f0f6'),\n",
       "  u'created': {u'changeset': u'2511284',\n",
       "               u'timestamp': u'2009-09-17T12:28:03Z',\n",
       "               u'uid': u'20163',\n",
@@ -217,7 +217,7 @@
       "               u'version': u'4'},\n",
       "  u'id': u'104314',\n",
       "  u'pos': [51.5190718, -0.1118119],\n",
-      "  u'type': u'node'}]```"
+      "  u'type': u'node'}]"
      ]
     },
     {
@@ -249,10 +249,10 @@
      "prompt_number": 28
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "```[{u'_id': u'convenience', u'count': 450},\n",
+      "[{u'_id': u'convenience', u'count': 450},\n",
       " {u'_id': u'clothes', u'count': 300},\n",
       " {u'_id': u'supermarket', u'count': 195},\n",
       " {u'_id': u'hairdresser', u'count': 142},\n",
@@ -281,7 +281,7 @@
       " {u'_id': u'sports', u'count': 23},\n",
       " {u'_id': u'art', u'count': 22},\n",
       " {u'_id': u'butcher', u'count': 22},\n",
-      " {u'_id': u'deli', u'count': 21}]```"
+      " {u'_id': u'deli', u'count': 21}]"
      ]
     },
     {
@@ -313,10 +313,10 @@
      "prompt_number": 21
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "```[{u'_id': u'Amaroussi', u'count': 85661},\n",
+      "[{u'_id': u'Amaroussi', u'count': 85661},\n",
       " {u'_id': u'Paul The Archivist', u'count': 70300},\n",
       " {u'_id': u'Tom Chance', u'count': 62752},\n",
       " {u'_id': u'Blumpsy', u'count': 46836},\n",
@@ -325,7 +325,7 @@
       " {u'_id': u'Harry Wood', u'count': 33152},\n",
       " {u'_id': u'DLMatthews', u'count': 31197},\n",
       " {u'_id': u'TimSC_Data_CC0_To_Andy_Allan', u'count': 27347},\n",
-      " {u'_id': u'mapper999', u'count': 21350}]```"
+      " {u'_id': u'mapper999', u'count': 21350}]"
      ]
     },
     {
@@ -358,10 +358,10 @@
      "prompt_number": 19
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "```[{u'_id': u'place_of_worship', u'count': 247},\n",
+      "[{u'_id': u'place_of_worship', u'count': 247},\n",
       " {u'_id': u'theatre', u'count': 136},\n",
       " {u'_id': u'restaurant', u'count': 110},\n",
       " {u'_id': u'university', u'count': 84},\n",
@@ -370,7 +370,7 @@
       " {u'_id': u'hospital', u'count': 36},\n",
       " {u'_id': u'courthouse', u'count': 24},\n",
       " {u'_id': u'cinema', u'count': 19},\n",
-      " {u'_id': u'bar', u'count': 18}]```"
+      " {u'_id': u'bar', u'count': 18}]"
      ]
     },
     {
@@ -402,12 +402,12 @@
      "prompt_number": 17
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "```[{u'_id': u'Screen On The Green', u'wikipedia': u'en:The Screen On The Green'},\n",
+      "[{u'_id': u'Screen On The Green', u'wikipedia': u'en:The Screen On The Green'},\n",
       " {u'_id': u'Cineworld', u'wikipedia': u'en:The O2'},\n",
-      " {u'_id': u'BFI IMAX', u'wikipedia': u'en:London_IMAX'}]```"
+      " {u'_id': u'BFI IMAX', u'wikipedia': u'en:London_IMAX'}]"
      ]
     },
     {
